refactor(DelimiterExtractor): 정규식 및 구분자 처리 로직 개선 - 정규식 Pattern, 기본 구분자 리스트를  상수화로 정의하여 가독성을 높임 - 중복 조건문 제거 및 코드 구조 단순화